# meteologica-prueba-tecnica

./: README.md  compose.yaml  service-a-cities.bat  service-a-cities.sh  service-a-health.bat  service-a-health.sh  service-a-ingest.bat  service-a-ingest.sh  service-a-weather.bat  service-a-weather.sh  service-b-health.bat  service-b-health.sh  service-b-weather-daily.bat  service-b-weather-daily.sh  service-b-weather-rolling7.bat  service-b-weather-rolling7.sh
mysql-init-files/: init.sql
service_a/: CMakeLists.txt  Dockerfile  main.cpp  openapi.yaml  utils.cpp  utils.h
service_b/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp  openapi.yaml  utils.cpp  utils.h
